<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_settings">

        <ListPreference
            app:key="theme_mode"
            app:title="@string/theme_settings"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:key="language"
            app:title="@string/language_settings"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="ru"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_settings">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifications"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="about"
            app:title="@string/about_app"
            app:summary="@string/version"/>

    </PreferenceCategory>
</PreferenceScreen>